# spinalflow-sim

./: .gitignore  Architecture.md  CMakeLists.txt  Memo.md  cache_analysis.md  score_board.md
include/arch/: builder.hpp  filter_buffer.hpp  global_merger.hpp  input_spine_buffer.hpp  input_weight_provider.hpp  intermediate_fifo.hpp  min_finder_batch.hpp  output_harvest.hpp  output_queue.hpp  output_serializer.hpp  output_sorter.hpp  output_spine.hpp  pe.hpp  pe_array.hpp  smallest_ts_picker.hpp  tiled_output_buffer.hpp
include/arch/cache/: cache.hpp
include/arch/dram/: conv_shape.hpp  dram_common.hpp  dram_format.hpp  fixed_stride_format.hpp  input_spine_fetcher.hpp  layer_directory.hpp  output_spine_writer.hpp  packed_format.hpp  simple_dram.hpp  stream_reader.hpp  stream_writer.hpp  weight_loader.hpp
include/arch/driver/: batch_spine_map.hpp  make_batch_map_sliding.hpp  pe_output_mapper.hpp  weight_lut.hpp
include/common/: constants.hpp  entry.hpp  output_token.hpp
include/core/: clock.hpp  core.hpp  core_iface.hpp  io_shadow.hpp
include/model/: conv_layer.hpp  conv_layer_v1.hpp  fc_layer.hpp  fc_layer_v1.hpp
include/model/conv_layer/: address.hpp  batch_map_builder.hpp  filter_lut_build.hpp  print.hpp
include/runner/: conv_runner.hpp  simulation.hpp
include/stats/: layer_summary_csv.hpp  sim_stats.hpp
include/utils/: latency_stats.hpp
scripts/: plot_reuse_histograms.py
src/: main.cpp
src/arch/: builder.cpp  filter_buffer.cpp  global_merger.cpp  input_spine_buffer.cpp  input_weight_provider.cpp  intermediate_fifo.cpp  min_finder_batch.cpp  output_harvest.cpp  output_queue.cpp  output_serializer.cpp  output_sorter.cpp  pe.cpp  pe_array.cpp  smallest_ts_picker.cpp  tiled_output_buffer.cpp
src/arch/cache/: cache.cpp
src/arch/dram/: fixed_stride_format.cpp  input_spine_fetcher.cpp  output_spine_writer.cpp  packed_format.cpp  simple_dram.cpp  stream_reader.cpp  weight_loader.cpp
src/arch/driver/: batch_spine_map.cpp  weight_lut.cpp
src/core/: clock.cpp  core.cpp
src/model/: conv_layer.cpp  conv_layer_v1.cpp  fc_layer.cpp  fc_layer_v1.cpp
src/model/conv_layer/: address.cpp  batch_map_builder.cpp  filter_lut_build.cpp  print.cpp
src/runner/: conv_demo.cpp  conv_runner.cpp  integration_demo.cpp  integration_demo_fb.cpp  simulation.cpp
stats/: Latency_distribution_summary__all_5_categories_.csv  plot_layer_pies.py  plot_sram_accesses.py  plot_stage_cycles_pie.py
tests/: test_builder_min.cpp  test_first_layer_cache.cpp  test_layer5_cache.cpp  test_layer8_cache.cpp  test_pipeline_integration.cpp  test_simple_dram_read.cpp
tests/driver/: test_batch_mapping.cpp
tests/smoke/: smoke_conv_layer.cpp
tests/unit/: test_input_spine_buffer.cpp  test_min_finder.cpp  test_output_queue.cpp  test_pe.cpp  test_weight_lut.cpp
workloads/repo2/vgg11/: dram_meta.json
workloads/repo2/vgg9/: dram_meta.json
workloads/repo3/resnet19/: dram_meta.json
workloads/repo3/vgg16/: dram_meta.json
workloads/repo4/resnet19/: dram_meta.json
workloads/repo4/vgg16/: dram_meta.json
